--- a/app/src/index.css
+++ b/app/src/index.css
@@ -17,19 +17,19 @@ body {
 }
 
 .btn {
-  @apply pt-4 pr-6 pb-4 pl-6 bg-white text-black rounded-md font-bold hover:ease-in duration-300 hover:bg-gradient-to-r from-blue-600 to-yellow-500 hover:text-white;
+  @apply rounded-md bg-white from-blue-600 to-yellow-500 pt-4 pr-6 pb-4 pl-6 font-bold text-black duration-300 hover:bg-gradient-to-r hover:text-white hover:ease-in;
 }
 
 .special-hover {
-  @apply hover:ease-in duration-300 hover:bg-gradient-to-r from-blue-600 to-yellow-500 hover:text-white;
+  @apply from-blue-600 to-yellow-500 duration-300 hover:bg-gradient-to-r hover:text-white hover:ease-in;
 }
 
 .heading {
-  @apply text-3xl lg:text-4xl text-white font-bold border-b-8 pb-4 w-4/5 lg:w-3/5;
+  @apply w-4/5 border-b-8 pb-4 text-3xl font-bold text-white lg:w-3/5 lg:text-4xl;
 }
 
 .heading-2 {
-  @apply text-3xl lg:text-2xl text-white font-bold;
+  @apply text-3xl font-bold text-white lg:text-2xl;
 }
 
 .form-higlight {
@@ -41,5 +41,5 @@ body {
 }
 
 .input-text {
-  @apply p-3 rounded-md bg-gray-800 resize-none text-white focus:outline-none focus:outline-blue-600;
+  @apply resize-none rounded-md bg-gray-800 p-3 text-white focus:outline-none focus:outline-blue-600;
 }
