--- a/app/src/gallery.css
+++ b/app/src/gallery.css
@@ -1,12 +1,3 @@
-#app {
-  height: 100%;
-}
-html,
-body {
-  position: relative;
-  height: 100%;
-}
-
 .swiper {
   width: 100%;
   height: 100%;
@@ -37,4 +28,21 @@ body {
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+.swiper-button-prev {
+  background-color: #fff;
+  color: #000 !important;
+  padding: 1rem !important;
+  width: 3rem !important;
+  border-radius: 100% !important;
+  font-size: 150px !important;
+}
+
+.swiper-button-next {
+  background-color: #fff;
+  color: #000 !important;
+  padding: 1rem !important;
+  width: 3rem !important;
+  border-radius: 100% !important;
 }
